--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Why do I need to provide this?
 <br>
 <div class="row">
 <div class="col-md-12">
-<img src="C:\Users\viren\Desktop\Facebook\footer.jpg"></img>
+<img src="footer.jpg"></img>
 </div>
 </div>
 </body>
