--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ border-radius:3px;
 <div class="row">
 <div class="col-md-6">
 <div class="image">
-<img src="C:\Users\viren\Desktop\Facebook\facebook.jpg"></img>
+<img src="facebook.jpg"></img>
 </div>
 </div>
 <div class="col-md-6">
