--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
 <style>
-.header h1{
+
+.col-md-6 h1{
 background-color:#4B629F;
 color:white;
 font-family:Helvetica;
@@ -19,8 +20,38 @@ padding-left:190px;
 .col-md-6 h1{
 	padding-bottom:10px;
 }
-.col-sm-2 p{
+.col-md-6 p{
 padding-left:100px;
+}
+.col-md-6 input{
+font-weight:bold;
+padding-left:12px;
+padding-right:12px;
+padding-top:4px;
+padding-bottom:4px;
+font-size:12px;
+font-family:Helvetica;
+color:white;
+border-width:1px;
+border-color:#4B629F;
+}
+.content p{
+background-color:#4B629F;
+}
+.col-md-6 button{
+font-weight:bold;
+padding-left:12px;
+padding-right:12px;
+padding-top:4px;
+padding-bottom:4px;
+background-color:#4B6DB2;
+margin-left:275px;
+font-size:12px;
+font-family:Helvetica;
+color:white;
+border-width:1px;
+border-color:#4B629F;
+
 }
 .col-sm-2{
 padding-left:0px;
@@ -41,38 +72,67 @@ color:white;
 padding-top:10px;
 font-size:12px;
 }
-.button{
-background-color:#4B629F;
-padding-top:27px;
-width:250px;
-height:73px;
-}
-.button input{
-font-weight:bold;
-padding-left:12px;
-padding-right:12px;
-padding-top:4px;
-padding-bottom:4px;
-background-color:#4B6DB2;
-font-size:12px;
-font-family:Helvetica;
-color:white;
-border-width:1px;
-border-color:#4B629F;
-}
+
 .button1 input{
 font-weight:bold;
+padding-left:18px;
+padding-right:18px;
+padding-top:4px;
+padding-bottom:4px;
+background-color:#659B4D;
+margin-left:375px;
+font-size:12px;
+font-family:Helvetica;
+color:white;
+border-width:1px;
+border-radius:2px;
+border-color:#4B629F;
+}
+.col-sm-2 input{
+padding-left:10px;
+padding-right:10px;
+padding-top:3px;
+padding-bottom:3px;
+border-radius:3px;
+color:white;
+background-color:#9AA9CA;
+border-width:1px;
+border-color:#4B629F;
+}
+.col-sm-2 h6{
+
+font-weight:bold;
+padding-right:12px;
+padding-top:25px;
+padding-bottom:4px;
+background-color:#4B629F;
+font-size:12px;
+font-family:Helvetica;
+color:white;
+height:73px;
+border-width:1px;
+border-color:#4B629F;
+
+}
+.col-md-2{
+padding-left:0px;
+padding-right:0px;
+}
+.col-md-2 p{
+font-weight:bold;
 padding-left:12px;
 padding-right:12px;
 padding-top:4px;
 padding-bottom:4px;
-background-color:#4B6DB2;
-margin-left:275px;
+background-color:#4B629F;
 font-size:12px;
 font-family:Helvetica;
 color:white;
 border-width:1px;
 border-color:#4B629F;
+padding-top:8px;
+height:73px;
+
 }
 .pass a{
 text-decoration:none;
@@ -88,7 +148,7 @@ height:400px;
 margin-top:30px;
 }
 .signup p{
-margin-left:115px;
+margin-left:190px;
 color:#1C3A6E;
 font-size:24px;
 font-weight:bold;
@@ -96,7 +156,7 @@ margin-top:75px;
 
 }
 .join h3{
-margin-left:115px;
+margin-left:293px;
 color:#1C3A6E;
 font-size:24px;
 font-weight:600px;
@@ -170,24 +230,27 @@ border-radius:3px;
 </style>
 </head>
 <body>
-<div class="header">
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-6">
 <h1>facebook</h1>
 </div>
-<div class="col-sm-2">
+<div class="col-md-2">
 <span>
 <p>Email or Phone<br><input type="text" value="">
-</input type></p></span></div>
-<div class="col-sm-2">
-<div class="pass">
+</input type></p></span>
+</div>
+<div class="col-md-2">
 <span>
 <p>Password<br><input type="text" value=""><br>
-</input type><a href="a.html">Forgotten Account?</a></p></span></div></div>
-<div class="button">
+</input type><a href="a.html">Forgotten Account?</a></p></span>
+</div>
+<div class="col-sm-2">
+<h6>
 <b><input type="button" value="Log In" name="login">
 </input type>
-</b></div>
+</b></h6>
+</div>
 </div>
 </div>
 <div class="row">
