--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ padding-top:4px;
 padding-bottom:4px;
 font-size:12px;
 font-family:Helvetica;
-color:white;
+color:black;
 border-width:1px;
 border-color:#4B629F;
 }
