--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="bootstrap-4.5.2-dist\css\bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\css\bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
+<script type="text/javascript" src="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
 <style>
 
 .col-md-6 h1{
@@ -31,7 +31,7 @@ padding-top:4px;
 padding-bottom:4px;
 font-size:12px;
 font-family:Helvetica;
-color:black;
+color:white;
 border-width:1px;
 border-color:#4B629F;
 }
@@ -205,8 +205,11 @@ margin-left:275px;
 color:#1C3A6E;
 font-size:12px;
 font-weight:normal;
+text-decoration:none;
 }
-
+.f4 a{
+text-decoration:none;
+}
  .newpass p{
 margin-left:180px;
 color:#1C3A6E;
@@ -224,8 +227,30 @@ border-radius:3px;
  color:black;
  font-weight:bold;
  }
- .col-md-12 img{
- width:1550px;
+ .col-md-12 a{
+ text-decoration:none;
+ color:#5E6A7E;
+ font-size:14px;
+padding-left:70px;
+ }
+ .col-md-12{
+ height:190px;
+ background-color:#FFFFFF;
+ }
+ hr{
+ margin-left:160px;
+ border: 0.5px solid grey;
+ width:1300px;
+ }
+ .foot a{
+ padding-left:40px;
+ 
+ }
+ .foot p{
+ font-size:11px;
+ color:#5E6A7E;
+ margin-left:160px;
+ margin-top:9px;
  }
 </style>
 </head>
@@ -235,17 +260,17 @@ border-radius:3px;
 <div class="col-md-6">
 <h1>facebook</h1>
 </div>
-<div class="col-md-2">
+<div class="col-md-2 ">
 <span>
 <p>Email or Phone<br><input type="text" value="">
 </input type></p></span>
 </div>
-<div class="col-md-2">
+<div class="col-md-2 ">
 <span>
 <p>Password<br><input type="text" value=""><br>
 </input type><a href="a.html">Forgotten Account?</a></p></span>
 </div>
-<div class="col-sm-2">
+<div class="col-sm-2 ">
 <h6>
 <b><input type="button" value="Log In" name="login">
 </input type>
@@ -256,7 +281,7 @@ border-radius:3px;
 <div class="row">
 <div class="col-md-6">
 <div class="image">
-<img src="facebook.jpg"></img>
+<img src="C:\Users\viren\Desktop\Facebook\facebook.jpg"></img>
 </div>
 </div>
 <div class="col-md-6">
@@ -426,9 +451,9 @@ border-radius:3px;
 </select>
 </p></div>
 <div class="f4">
-<p>
+<p><a href="#">
 Why do I need to provide this?
-</p>
+</a></p>
 </div>
 <div class="button1">
 <b><input type="button" value="Sign Up" name="Sign Up">
@@ -438,8 +463,17 @@ Why do I need to provide this?
 </div>
 <br>
 <div class="row">
-<div class="col-md-12">
-<img src="footer.jpg"></img>
+<div class="col-md-12 ">
+<pre>            <a href="#">English(UK)</a><a href="#"> मराठी ·</a><a href="#">Bahasa Indonesia</a><a href="#">ردو ·</a><a href="#">Bahasa Melayu</a><a href="#">ગુજરાતી</a><a href="#">हिन्दी</a></pre>
+<hr></hr>
+<div class="foot">
+<pre>                <a href="#">Sign Up</a><a href="#">Log In</a><a href="#">Messanger</a><a href="#">Facebook Lite</a><a href="#">Mobile</a><a href="#">Find Friends</a><a href="#">People</a><a href="#">Pages</a><a href="#">Places</a><a href="#">Games</a><a href="#">Locations</a><br>                <a href="#">Celebrities</a><a href="#">Groups</a><a href="#">Moments</a><a href="#">Instagram</a><a href="#">About</a><a href="#">Create Advert</a><a href="#">Create Page</a><a href="#">Developers</a><a href="#">Careers</a><a href="#">Privacy</a><a href="#">Cookies</a><br>                <a href="#">AdChoices</a><a href="#">Terms</a><a href="#">Help</a>
+<p>Facebook@2020</p>
+</pre>
+
+</div>
+</pre>
+</div>
 </div>
 </div>
 </body>
