--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\css\bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="bootstrap-4.5.2-dist\css\bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
+<script type="text/javascript" src="bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
 <style>
 
 .col-md-6 h1{
@@ -281,7 +281,7 @@ padding-left:70px;
 <div class="row">
 <div class="col-md-6">
 <div class="image">
-<img src="C:\Users\viren\Desktop\Facebook\facebook.jpg"></img>
+<img src="facebook.jpg"></img>
 </div>
 </div>
 <div class="col-md-6">
