--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="bootstrap-4.5.2-dist\css\bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
@@ -257,15 +258,15 @@ padding-left:70px;
 <body>
 <div class="container-fluid">
 <div class="row">
-<div class="col-md-6">
+<div class="col-xs-6 col-md-6">
 <h1>facebook</h1>
 </div>
-<div class="col-md-2 ">
+<div class="col-xs-2 col-md-2 ">
 <span>
 <p>Email or Phone<br><input type="text" value="">
 </input type></p></span>
 </div>
-<div class="col-md-2 ">
+<div class="col-xs-2 col-md-2 ">
 <span>
 <p>Password<br><input type="text" value=""><br>
 </input type><a href="a.html">Forgotten Account?</a></p></span>
@@ -284,7 +285,7 @@ padding-left:70px;
 <img src="facebook.jpg"></img>
 </div>
 </div>
-<div class="col-md-6">
+<div class="col-xs-6 col-md-6">
 <div class="signup">
 <p>Sign Up</p></div>
 <div class="join">
@@ -463,7 +464,7 @@ Why do I need to provide this?
 </div>
 <br>
 <div class="row">
-<div class="col-md-12 ">
+<div class="col-xs-12 col-md-12 ">
 <pre>            <a href="#">English(UK)</a><a href="#"> मराठी ·</a><a href="#">Bahasa Indonesia</a><a href="#">ردو ·</a><a href="#">Bahasa Melayu</a><a href="#">ગુજરાતી</a><a href="#">हिन्दी</a></pre>
 <hr></hr>
 <div class="foot">
