--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ padding-left:70px;
 <body>
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-6 col-md-6">
+<div class=" col-md-6">
 <h1>facebook</h1>
 </div>
 <div class="col-xs-2 col-md-2 ">
@@ -266,7 +266,7 @@ padding-left:70px;
 <p>Email or Phone<br><input type="text" value="">
 </input type></p></span>
 </div>
-<div class="col-xs-2 col-md-2 ">
+<div class="col-md-2 ">
 <span>
 <p>Password<br><input type="text" value=""><br>
 </input type><a href="a.html">Forgotten Account?</a></p></span>
@@ -285,7 +285,7 @@ padding-left:70px;
 <img src="facebook.jpg"></img>
 </div>
 </div>
-<div class="col-xs-6 col-md-6">
+<div class="col-md-6">
 <div class="signup">
 <p>Sign Up</p></div>
 <div class="join">
@@ -464,7 +464,7 @@ Why do I need to provide this?
 </div>
 <br>
 <div class="row">
-<div class="col-xs-12 col-md-12 ">
+<div class="col-md-12 ">
 <pre>            <a href="#">English(UK)</a><a href="#"> मराठी ·</a><a href="#">Bahasa Indonesia</a><a href="#">ردو ·</a><a href="#">Bahasa Melayu</a><a href="#">ગુજરાતી</a><a href="#">हिन्दी</a></pre>
 <hr></hr>
 <div class="foot">
