--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ padding-left:70px;
 <div class=" col-md-6">
 <h1>facebook</h1>
 </div>
-<div class="col-xs-2 col-md-2 ">
+<div class="col-md-2 ">
 <span>
 <p>Email or Phone<br><input type="text" value="">
 </input type></p></span>
