--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="bootstrap-4.5.2-dist\css\bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale="1">
+<link rel="stylesheet" type="text/css" href="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\css\bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
+<script type="text/javascript" src="C:\Users\viren\Desktop\Facebook\bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
 <style>
 
 .col-md-6 h1{
@@ -258,7 +258,7 @@ padding-left:70px;
 <body>
 <div class="container-fluid">
 <div class="row">
-<div class=" col-md-6">
+<div class="col-md-6">
 <h1>facebook</h1>
 </div>
 <div class="col-md-2 ">
@@ -279,10 +279,11 @@ padding-left:70px;
 </div>
 </div>
 </div>
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-6">
 <div class="image">
-<img src="facebook.jpg"></img>
+<img src="C:\Users\viren\Desktop\Facebook\facebook.jpg"></img>
 </div>
 </div>
 <div class="col-md-6">
@@ -462,7 +463,9 @@ Why do I need to provide this?
 </b></div>
 </div>
 </div>
+</div>
 <br>
+<div class="container-fluid">
 <div class="row">
 <div class="col-md-12 ">
 <pre>            <a href="#">English(UK)</a><a href="#"> मराठी ·</a><a href="#">Bahasa Indonesia</a><a href="#">ردو ·</a><a href="#">Bahasa Melayu</a><a href="#">ગુજરાતી</a><a href="#">हिन्दी</a></pre>
