--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width,height=device-height", initial-scale="1">
+<meta name="viewport" content="width=device-width, initial-scale="1">
 <link rel="stylesheet" type="text/css" href="bootstrap-4.5.2-dist\css\bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap-4.5.2-dist\js\bootstrap.min.js" ></script>
