--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@
 body{
 background-image:url("b.jpg");
 }
+ .a{
+ height:320px;
+ width:100%;
+ background-color:peachpuff;
+ border-radius:20px;
+ margin-left:-8px;
+padding-right:14px;
+display:flex;
+ }
+ .a1{
+ background-color:lime;
+ padding-top:20px;
+ height:291px;
+ width:350px;
+ border:4px solid black;
+ border-radius:35px;
+ margin-left:30px;
+ margin-right:30px;
+ }
+ .a div{
+ flex:1;
+ }
+  .a2{
+ background-color:lime;
+ padding-top:20px;
+ height:291px;
+ width:350px;
+ border:4px solid black;
+ border-radius:35px;
+  margin-right:30px;
+ }
+  .a3{
+ background-color:lime;
+ padding-top:20px;
+ height:291px;
+ width:350px;
+ border:4px solid black;
+ border-radius:35px;
+  margin-right:30px;
+  
+ }
  .head {
  color:brown;
  background-color:peachpuff;
@@ -58,6 +99,55 @@ height:150px;
 body{
 height:500px;
 }
+ .a{
+ height:450px;
+ width:452px;
+ background-color:peachpuff;
+ border-radius:20px;
+ margin-left:-8px;
+padding-right:14px;
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+align-content: flex-start;
+font-size:12px;
+
+ }
+ .a1{
+ background-color:lime;
+ padding-top:20px;
+ height:221px;
+ border:4px solid black;
+ border-radius:35px;
+ margin-left:20px;
+ margin-right:10px;
+ }
+ .a div{
+ flex:2;
+ height:221px;
+ width:350px;
+ margin-left:30px;
+ margin-top:20px;
+ }
+  .a2{
+ background-color:lime;
+ padding-top:20px;
+ height:291px;
+ width:350px;
+ border:4px solid black;
+ border-radius:35px;
+  margin-right:10px;
+ }
+  .a3{
+ background-color:lime;
+ padding-top:20px;
+ height:291px;
+ width:350px;
+ border:4px solid black;
+ border-radius:35px;
+  margin-right:0px;
+  
+ }
 .head{
 color:brown;
  background-color:peachpuff;
@@ -92,7 +182,6 @@ background-color:orange;
  animation:a 3s 1;
  position:relative;
  animation-fill:backward;
-
  }
  @keyframes a{
  from{
@@ -104,7 +193,6 @@ background-color:orange;
  color:black;
  }
   }
-  
 </style>
  </head>
  <body>
@@ -114,5 +202,21 @@ background-color:orange;
 <div class="content">
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
  nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-</div> </body>
+</div> 
+<br>
+<div class="a">
+<div class="a1">
+<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+ nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="a2">
+<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+ nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+</div>
+<div class="a3">
+<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
+ nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+</div>
+</div>
+</body>
  </html>
