--- a/index.html
+++ b/index.html
@@ -1,219 +1,219 @@
 <!DOCTYPEhtml>
- <html>
- <head>
-  <meta charset="UTF-8" />
- <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<html>
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
 body{
-background-image:url("b.jpg");
+background-color:white;
 }
- .a{
- height:320px;
- width:100%;
- background-color:peachpuff;
- border-radius:20px;
- margin-left:-8px;
-padding-right:14px;
-display:flex;
- }
- .a1{
- background-color:lime;
- padding-top:20px;
- height:291px;
- width:350px;
- border:4px solid black;
- border-radius:35px;
- margin-left:30px;
- margin-right:30px;
- }
- .a div{
- flex:1;
- }
-  .a2{
- background-color:lime;
- padding-top:20px;
- height:291px;
- width:350px;
- border:4px solid black;
- border-radius:35px;
-  margin-right:30px;
- }
-  .a3{
- background-color:lime;
- padding-top:20px;
- height:291px;
- width:350px;
- border:4px solid black;
- border-radius:35px;
-  margin-right:30px;
-  
- }
- .head {
- color:brown;
- background-color:peachpuff;
- padding:5px;
- margin-top:-8px;
- width:100%;
- margin-left:-8px;
- padding-right:10px;
- }
- .head h2{
- background-color:orange;
- color:brown;
- width:250px;
- margin-left:500px;
- border:10px solid;
- border-image:url(des.jpg)round;
- border-image-slice:10%;
- animation:a 3s 1;
- position:relative;
- animation-fill:backward;
- }
- @keyframes a{
- from{
- top:0px;
- }
- to{top:30px;background-color:pink;}
- }
- .head a{
- color:black;
- }
-.content{
-height:250px;
-border-radius:25px;
-width:500px;
-margin-top:10px;
-margin-left:400px;
-background-color:lime;
-padding-top:30px;
-text-indent:40px;
-transition:height 2s;
-box-shadow:5px 5px;
-cursor:all-scroll;
-}
-.content:hover{
-height:150px;
-}
-@media screen and (max-width: 650px) {
-body{
-height:500px;
-}
- .a{
- height:1000px;
- width:452px;
- background-color:peachpuff;
- border-radius:20px;
- margin-left:-8px;
-padding-right:14px;
-display: flex;
-flex-wrap: wrap;
-flex-direction: column;
-align-content: flex-start;
-font-size:12px;
-
- }
- .a div{
- flex:2;
- height:921px;
- width:350px;
- margin-left:30px;
- margin-top:20px;
- }
- .a1{
- background-color:lime;
- padding-top:20px;
- border:4px solid black;
- border-radius:35px;
- margin-left:20px;
- margin-right:10px;
- }
-  .a2{
- background-color:lime;
- padding-top:20px;
- width:350px;
- border:4px solid black;
- border-radius:35px;
-  margin-right:10px;
- }
-  .a3{
- background-color:lime;
- padding-top:20px;
- width:350px;
- border:4px solid black;
- border-radius:35px;
-  margin-right:0px;
-  
- }
 .head{
-color:brown;
- background-color:peachpuff;
- padding:1px;
- margin-top:-8px;
-width:456px;
- margin-left:-8px;
- padding-right:10px;
+height:100px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:1527px;
+margin-left:-8px;
+margin-top:-25px;
+padding-right:8px;
 }
-.content{
-  height:250px;
-border-radius:25px;
-width:450px;
-margin-top:10px;
- margin-left:-1px; 
-background-color:lime;
-padding-top:30px;
-text-indent:40px;
-transition:height 2s;
-box-shadow:5px 5px;
-cursor:all-scroll;
+.head h2{
+color:White;
+padding-top:17px;
+font-family:Arial;
+font-size:27px;
+padding-left:70px;
+}
+.head p{
+color:White;
+font-family:Arial;
+padding-left:70px;
+margin-top:-8px;
+}
+.head input{
+margin-left:1120px;
+margin-top:-100px;
+padding-left:13px;
+padding-right:13px;
+padding-top:13px;
+padding-bottom:6px;
+border:2px solid white;
+border-radius:4px;
+background-color:#E25349;
+color:White;
+}
+.lang select{
+margin-top:55px;
+padding-top:5px;
+padding-bottom:5px;
+color:#D9D9D9;
+border:0px white;
+margin-left:680px;
+font-size:19px;
+}
+img{
+margin-left:630px;
+margin-top:20px;
+height:113px;
+width:197px;
+}  
+button{
+background-color: DodgerBlue;
+  color: white;
+  font-size: 16px;
+  height:30px;
+  width:220px;
+  margin-top:20px;
+  text-align:left;
+  padding-left:21px;
+  border-radius:6px;
+  margin-left:621px;
+  border:0px solid DodgerBlue;
   }
-  .head h2{
+  .or p{
+  margin-left:540px;
+  color:#d9d9d9;
+  }
+  .data input{
+  margin-left:575px;
+  margin-top:17px;
+  width:300px;
+text-align:center;
+height:26px;
+border-radius:4px;
+  }
+  .data i{
+  margin-left:10px;
+  }
+  .data button{
+   color: white;
+  font-size: 16px;
+  height:38px;
+  width:86px;
+  margin-top:20px;
+  text-align:left;
+  padding-right:8px;
+  padding-left:14px;
+  border-radius:6px;
+  margin-left:682px;
+  border:0px solid DodgerBlue;
+  }
+  hr{
+  margin-top:40px;
+  border:1px solid #d9d9d9;
+  }
+  a{
+  text-decoration:none;
+  color:#0091D5;
+  margin-left:670px;
+  margin-top:15px;
+  }  
+  .foot a{
+  color:#555555;
+  font-weight:bold;
+  margin-left:591px;
+  margin-top:20px;
+  font-size:17px;
+  }
+  @media only screen and (max-width:640px){
+  body{
+  height:50%;
+  }
+  .head{
+height:85px;
+background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
+width:360px;
+margin-left:-8px;
+margin-top:-25px;
+padding-right:8px;
+display:flex;
+flex-wrap: wrap;
+}
+.head h2{
+color:White;
+padding-top:10px;
+font-family:Arial;
+font-size:20px;
+padding-left:30px;
+display:flex;
+}
+.head p{
+color:White;
+font-family:Arial; 
+font-size:10px;
+padding-left:30px;
+}
+.head input{
+margin-left:260px;
+margin-top:-40px;
+padding-left:13px;
+padding-right:13px;
+padding-top:13px;
+padding-bottom:6px;
+border:2px solid white;
+border-radius:4px;
+background-color:#E25349;
+color:White;
+display:flex;
+}
+.lang select{
+margin-top:35px;
+padding-top:5px;
+padding-bottom:5px;
+color:#D9D9D9;
+border:0px white;
+margin-left:130px;
+font-size:13px;
+display:flex;
+}
+img{
 margin-left:100px;
-background-color:orange;
- color:brown;
- width:250px;
- margin-left:100px;
- border:10px solid;
- border-image:url(des.jpg)round;
- border-image-slice:10%;
- animation:a 3s 1;
- position:relative;
- animation-fill:backward;
- }
- @keyframes a{
- from{
- top:0px;
- }
- to{top:30px;background-color:pink;}
- }
- .head a{
- color:black;
- }
+margin-top:20px;
+height:90px;
+width:132px;
+display:flex;
+} 
   }
 </style>
- </head>
- <body>
- <div class="head">
- <h2>Welcome to Site<a href="#"><i class="fab fa-whatsapp"></i></a></h2>
+</head>
+<body>
+<div class="head">
+<b><h2>
+Instagram
+</h2></b><p>Find it for Free on the App Store<b><input type="button" value="GET"></input></b></p>
 </div>
-<div class="content">
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
- nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-</div> 
+<div class="lang">
+<select id="lang" name="language">
+  <option value="English">English</option>
+  <option value="Hindi">Hindi</option>
+  <option value="Arabic">Arabic</option>
+  <option value="Turkey">Turkey</option>
+  <option value="Spanish">Spanish</option>
+</select>
+</div>
+<img src="insta.png">
+</img>
+<div class="data1">
+<button class="btn"><i class="fa fa-facebook"> Continue with Facebook</i></button>
+</div>
 <br>
-<div class="a">
-<div class="a1">
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
- nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+<div class="or"> <p>─────────────── OR ───────────────</p></div>
+<div class="data">
+<input type="text" placeholder="Phonenumber or email or username"></input><br>
+<input type="password" placeholder="Passsword" id="myInput"><i class="far fa-eye" onclick="pass()"></i></input><br><br>
+<a href="#">Forgot Passsword?</a><br><br>
+<button class="btn">Login In</button>
 </div>
-<div class="a2">
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
- nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-</div>
-<div class="a3">
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
- nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-</div>
-</div>
+<hr></hr>
+<div class="foot"><a href="#">Don't have an account? SignUp</a></div>
+<script>
+function pass() {
+  var x = document.getElementById("myInput");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
+</script>
 </body>
- </html>
+</html>
