--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ display:flex;
 .lang select{
 margin-top:35px;
 padding-top:5px;
+  background-color:white;
 padding-bottom:5px;
 color:#D9D9D9;
 border:0px white;
