--- a/index.html
+++ b/index.html
@@ -119,14 +119,15 @@ html, body
 {
 height:100%;
 overflow-x: hidden;
+margin-top:0px;
+margin-left:0px;
+margin-right:0px;
 }
   .head{
 height:85px;
 background:linear-gradient(to right,#DD4C53 10%,#E25447 100%);
 width:360px;
-margin-left:-15px;
 padding-top:10px;
-padding-right:8px;
 display:flex;
 flex-wrap: wrap;
 }
@@ -158,11 +159,11 @@ color:White;
 display:flex;
 }
 .lang select{
-margin-top:35px;
+margin-top:20px;
 padding-top:5px;
-  background-color:white;
 padding-bottom:5px;
 color:#D9D9D9;
+background-color:white;
 border:0px white;
 margin-left:130px;
 font-size:13px;
